# conway

./: CMakeLists.txt
src/: conway.cpp  conway.hpp  main.cpp
