CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(target)
AUX_SOURCE_DIRECTORY(src SOURCES)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_STANDARD 14)
FIND_PACKAGE(SFML 2 REQUIRED system window graphics network audio)
ADD_EXECUTABLE(target ${SOURCES})
TARGET_LINK_LIBRARIES(target ${SFML_LIBRARIES})
